# TwistOCaml

./: .gitignore  Cube-Rep-Explainer.md  INSTALL.md  README.md  dune-project  rubiks_cube.opam
data/: command_help.txt  logo.txt  menu_options.txt  mode_select.txt  patterns.csv  reset.sh  shop_options.csv  stickers.csv  times.csv
lib/: cube.mli  dune  shop.ml  shop.mli  threecube.ml  twocube.ml  util.ml  util.mli
test/: dune  test_rubiks_cube.ml
